# TextComplexity-Service

./: .gitignore  .gitmodules  README.md  client_convert.go  graph.drawio  hello.py  main.py  pdftotest.go  register.go  Диаграмма без названия.drawio
analysis_service/: CMakeLists.txt  Readme.md  analys_alg.cpp  analys_alg.h  constants.hpp  db.cpp  db.h  main.cpp  router.cpp  router.hpp
analysis_service/protos/: text_analys.proto
analysis_service/protos/generate/cpp/: text_analys.grpc.pb.cc  text_analys.grpc.pb.h  text_analys.pb.cc  text_analys.pb.h
analysis_service/utils/: ReloadProto.sh  script_generate.bat
client_convert/go_microservice/: main.go  pr_test.go
client_convert/go_microservice/static/: styles.css
client_convert/go_microservice/templates/: header.html  index.html
client_convert/go_microservice/test_text/: gotest.txt
convert/: go.mod  go.sum  index.html  main.go  uploaded_file.txt
go-auth/: go.mod  go.sum  login.html  main.go  register.html
go-auth/template/: index.html
go_microservice/: go.mod  go.sum  main.go
go_microservice/static/: styles.css
go_microservice/templates/: header.html  index.html  show.html
go_microservice/test_text/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
microservice/: go.work  go.work.sum
microservice/convert/: go.mod  main.go  uploaded_file.txt
microservice/go_microservice/: main.go  test.go  uploaded_file.txt
microservice/go_microservice/libs/: libs.txt
microservice/go_microservice/pkg/client/: text_analys.pb.go  text_analys_grpc.pb.go
microservice/go_microservice/protos/: text_analys.proto
microservice/go_microservice/templates/: header.html  index.html
